[gd_scene load_steps=6 format=3 uid="uid://c6nwil2bg6nb0"]

[ext_resource type="FontFile" uid="uid://7kk4yqg6nmxs" path="res://Assets/m5x7.ttf" id="1_6keic"]
[ext_resource type="Script" path="res://Scenes/Menu/pause_menu.gd" id="1_p6p16"]
[ext_resource type="Theme" uid="uid://crpwwkv86fwfa" path="res://button_theme.tres" id="3_m28jq"]
[ext_resource type="AudioStream" uid="uid://2th70ggn6uyo" path="res://Assets/Audio/Ludum Dare 30 - 07.ogg" id="3_ve4hk"]
[ext_resource type="AudioStream" uid="uid://ctakppq0oro6y" path="res://Assets/Audio/Select 1.wav" id="4_mca6o"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 2
visible = false
script = ExtResource("1_p6p16")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 0
offset_right = 1150.0
offset_bottom = 645.0

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_top = 40.0
offset_right = 1150.0
offset_bottom = 260.0
theme_override_fonts/font = ExtResource("1_6keic")
theme_override_font_sizes/font_size = 100
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 0
offset_left = 429.0
offset_top = 260.0
offset_right = 741.0
offset_bottom = 572.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Resume" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_m28jq")
text = "Resume"

[node name="Settings" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_m28jq")
text = "Settings"

[node name="Tutorial" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_m28jq")
text = "Tutorial"

[node name="Exit" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_m28jq")
theme_override_font_sizes/font_size = 50
text = "Exit"

[node name="BGM" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ve4hk")
autoplay = true

[node name="SelectFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_mca6o")

[connection signal="focus_entered" from="Control/MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_focus_entered"]
[connection signal="mouse_entered" from="Control/MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_mouse_entered"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="focus_entered" from="Control/MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_focus_entered"]
[connection signal="mouse_entered" from="Control/MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_mouse_entered"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="focus_entered" from="Control/MarginContainer/VBoxContainer/Tutorial" to="." method="_on_tutorial_focus_entered"]
[connection signal="mouse_entered" from="Control/MarginContainer/VBoxContainer/Tutorial" to="." method="_on_tutorial_mouse_entered"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="focus_entered" from="Control/MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_focus_entered"]
[connection signal="mouse_entered" from="Control/MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_mouse_entered"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
